--- a/Bit_Genie2/Bit_Genie2.vcxproj.filters
+++ b/Bit_Genie2/Bit_Genie2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\string_parse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\move.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Square.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\string_parse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\move.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
