--- a/Bit_Genie2/Bit_Genie2.vcxproj.filters
+++ b/Bit_Genie2/Bit_Genie2.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\move.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\magicmoves.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Square.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\movegen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\magicmoves.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
