--- a/Bit_Genie2/Bit_Genie2.vcxproj.filters
+++ b/Bit_Genie2/Bit_Genie2.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\searchlimits.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Square.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\search.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
