--- a/Bit_Genie2/Bit_Genie2.vcxproj
+++ b/Bit_Genie2/Bit_Genie2.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="src\eval.cpp" />
     <ClCompile Include="src\search.cpp" />
     <ClCompile Include="src\searchlimits.cpp" />
+    <ClCompile Include="src\tt.cpp" />
     <ClCompile Include="src\uci.cpp" />
     <ClCompile Include="src\uciparse.cpp" />
     <ClCompile Include="src\stringparse.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="src\castle_rights.h" />
     <ClInclude Include="src\attacks.h" />
     <ClInclude Include="src\eval.h" />
+    <ClInclude Include="src\tt.h" />
     <ClInclude Include="src\search.h" />
     <ClInclude Include="src\searchinfo.h" />
     <ClInclude Include="src\searchlimits.h" />
