remove unused variables and fix some GCC warnings

--- a/Bit_Genie2/makefile
+++ b/Bit_Genie2/makefile
@@ -5,7 +5,7 @@ SOURCES = $(wildcard src/*.cpp)
 OBJECTS = $(SOURCES:%.cpp=%.o)
 DEPENDS = $(SOURCES:%.cpp=%.d)
 
-CXXFLAGS += -Wall -Wno-enum-compare -Wcast-qual -Wshadow -std=c++17 -O2
+CXXFLAGS += -Wall -Wno-enum-compare -Wno-switch -Wcast-qual -Wshadow -std=c++17 -O2
 CPPFLAGS += -MMD 
 
 all: $(EXE)
