changed move width to uint32_t to store move score
added mvv-lva, killer and capture bonus for move ordering

added sort and evaluate movelist functions

--- a/Bit_Genie2/Bit_Genie2.vcxproj
+++ b/Bit_Genie2/Bit_Genie2.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="src\eval.cpp" />
     <ClCompile Include="src\search.cpp" />
     <ClCompile Include="src\searchlimits.cpp" />
+    <ClCompile Include="src\moveorder.cpp" />
     <ClCompile Include="src\tt.cpp" />
     <ClCompile Include="src\uci.cpp" />
     <ClCompile Include="src\uciparse.cpp" />
