--- a/Bit_Genie2/Bit_Genie2.vcxproj.filters
+++ b/Bit_Genie2/Bit_Genie2.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\tt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\moveorder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Square.h">
