--- a/Bit_Genie2/Bit_Genie2.vcxproj.filters
+++ b/Bit_Genie2/Bit_Genie2.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClInclude Include="src\killer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\shistory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
