--- a/Bit_Genie2/Bit_Genie2.vcxproj
+++ b/Bit_Genie2/Bit_Genie2.vcxproj
@@ -153,7 +153,6 @@
     <ClCompile Include="src\piece.cpp" />
     <ClCompile Include="src\eval.cpp" />
     <ClCompile Include="src\search.cpp" />
-    <ClCompile Include="src\searchlimits.cpp" />
     <ClCompile Include="src\moveorder.cpp" />
     <ClCompile Include="src\tt.cpp" />
     <ClCompile Include="src\uci.cpp" />
@@ -170,6 +169,7 @@
     <ClInclude Include="src\shistory.h" />
     <ClInclude Include="src\killer.h" />
     <ClInclude Include="src\moveorder.h" />
+    <ClInclude Include="src\stopwatch.h" />
     <ClInclude Include="src\tt.h" />
     <ClInclude Include="src\search.h" />
     <ClInclude Include="src\searchinfo.h" />
