--- a/Bit_Genie2/makefile
+++ b/Bit_Genie2/makefile
@@ -5,7 +5,7 @@ SOURCES = $(wildcard src/*.cpp)
 OBJECTS = $(SOURCES:%.cpp=%.o)
 DEPENDS = $(SOURCES:%.cpp=%.d)
 
-CXXFLAGS += -Wall -Wno-enum-compare -Wno-switch -Wcast-qual -Wshadow -std=c++17 -O3
+CXXFLAGS += -Wall -Wno-enum-compare -Wno-switch -Wcast-qual -Wshadow -std=c++17 -O3 -march=native -flto -DNDEBUG
 CPPFLAGS += -MMD 
 
 all: $(EXE)
