--- a/Bit-Genie/Bit-Genie.vcxproj
+++ b/Bit-Genie/Bit-Genie.vcxproj
@@ -194,6 +194,9 @@
     <ClInclude Include="src\position.h" />
     <ClInclude Include="src\Square.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
