support for stop command while searching uci

--- a/Bit-Genie/Bit-Genie.vcxproj
+++ b/Bit-Genie/Bit-Genie.vcxproj
@@ -156,6 +156,8 @@
     <ClCompile Include="src\search.cpp" />
     <ClCompile Include="src\moveorder.cpp" />
     <ClCompile Include="src\benchmark.cpp" />
+    <ClCompile Include="src\searchlimits.cpp" />
+    <ClCompile Include="src\searchinit.cpp" />
     <ClCompile Include="src\tt.cpp" />
     <ClCompile Include="src\uci.cpp" />
     <ClCompile Include="src\uciparse.cpp" />
@@ -169,6 +171,7 @@
     <ClInclude Include="src\attacks.h" />
     <ClInclude Include="src\eval.h" />
     <ClInclude Include="src\benchmark.h" />
+    <ClInclude Include="src\searchinit.h" />
     <ClInclude Include="src\shistory.h" />
     <ClInclude Include="src\killer.h" />
     <ClInclude Include="src\moveorder.h" />
