remove sln and vcprj files

--- a/Bit-Genie/makefile
+++ b/Bit-Genie/makefile
@@ -1,20 +1,13 @@
-EXE = Bit-Genie.exe
+PROJECT := Bit-Genie
+SRC_DIR := src
+OBJ_DIR := obj
+SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
+OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
+LDFLAGS := -lpthread
+CPPFLAGS := -std=c++17 -O3 -DNDEBUG -flto
 
-SOURCES = $(wildcard src/*.cpp)
+$(PROJECT): $(OBJ_FILES)
+	g++ -o $@ $^ $(LDFLAGS) 
 
-OBJECTS = $(SOURCES:%.cpp=%.o)
-DEPENDS = $(SOURCES:%.cpp=%.d)
-
-CXXFLAGS += -Wall -Wno-enum-compare -Wno-switch -Wcast-qual -Wshadow -std=c++17 -O3 -march=native -flto -DNDEBUG
-CPPFLAGS += -MMD 
-
-all: $(EXE)
-
-$(EXE): $(OBJECTS)
-	$(CXX) $(CXXFLAGS) -o $@ $^
-
--include $(DEPENDS)
-
-re: clean all
-
-.PHONY: all clean re
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+	g++ $(CPPFLAGS) $(CXXFLAGS) -c -o $@ $<
