--- a/Bit-Genie/makefile
+++ b/Bit-Genie/makefile
@@ -4,7 +4,7 @@ OBJ_DIR := obj
 SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
 OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
 LDFLAGS := -lpthread
-CPPFLAGS := -std=c++17 -O3 -DNDEBUG -flto -march=native
+CPPFLAGS := -std=c++17 -O3 -DNDEBUG -flto -march=native -Wall -Wextra
 
 $(PROJECT): $(OBJ_FILES)
 	g++ -o $@ $^ $(LDFLAGS) 
