add EXE to make

--- a/Bit-Genie/makefile
+++ b/Bit-Genie/makefile
@@ -6,7 +6,7 @@ OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
 LDFLAGS := -lpthread
 CPPFLAGS := -std=c++17 -O3 -DNDEBUG -flto -march=native -Wall -Wextra
 
-$(PROJECT): $(OBJ_FILES)
+$(EXE): $(OBJ_FILES)
 	g++ -o $@ $^ $(LDFLAGS) 
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
