--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 EXE := Bit-Genie
-SRC := *.cpp
+SRC := *.cpp generator/game.cpp generator/generator.cpp
 CXX := g++
 
 EVALFILE = defaultnet.nn
@@ -7,12 +7,6 @@ EVALFILE = defaultnet.nn
 LFLAGS   := -lpthread
 WFLAGS   := -Wall -Wextra
 CXXFLAGS := -std=c++17 $(WFLAGS) -O3 -DNDEBUG -flto -march=native
-RFLAGS   := -std=c++17 -O3 -DNDEBUG -static 
 
 default:
 	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(CXXFLAGS) $(SRC) $(LFLAGS) -o $(EXE) 
-
-release:
-	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -mbmi2 -mavx2 -mpopcnt $(LFLAGS) -o $(EXE)-bmi2
-	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -msse4.2 -msse4.1 -mssse3 -mpopcnt $(LFLAGS) -o $(EXE)-modern 
-	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -mssse3 -mno-popcnt $(LFLAGS) -o $(EXE)-ssse3 
