added code, not working

--- a/src/makefile
+++ b/src/makefile
@@ -15,4 +15,7 @@ default:
 release:
 	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -mbmi2 -mavx2 -mpopcnt $(LFLAGS) -o $(EXE)-bmi2
 	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -msse4.2 -msse4.1 -mssse3 -mpopcnt $(LFLAGS) -o $(EXE)-modern 
-	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -mssse3 -mno-popcnt $(LFLAGS) -o $(EXE)-ssse3 
+	$(CXX) -DEVALFILE=\"$(EVALFILE)\" $(RFLAGS) $(SRC) -mssse3 -mno-popcnt $(LFLAGS) -o $(EXE)-ssse3
+
+generator:
+	$(CXX) -DEVALFILE=\"$(EVALFILE)\" -DFEN_GENERATOR $(CXXFLAGS) fen-gen/*.cpp $(SRC) $(LFLAGS) -o $(EXE)-generator
